--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: Kafka Sensors Demo
+    name: Kafka Starter
   datasource:
     url: jdbc:h2:mem:mydb
     username: sa
@@ -14,7 +14,7 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
     consumer:
-      group-id: my-group-id
+      group-id: my-group
   docker:
     compose:
       enabled: true
